tests/baselines/reference/awaitUsingDeclarations.4.errors.txt
awaitUsingDeclarations.4.ts(2,5): error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
awaitUsingDeclarations.4.ts(2,11): error TS2304: Cannot find name 'using'.
awaitUsingDeclarations.4.ts(2,18): error TS2304: Cannot find name 'a'.


==== awaitUsingDeclarations.4.ts (3 errors) ====
    {
        await using [a] = null;
        ~~~~~~~~~~~~~~~
!!! error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
              ~~~~~
!!! error TS2304: Cannot find name 'using'.
                     ~
!!! error TS2304: Cannot find name 'a'.
    }
    
    export {};